[tool.poetry]
name = "Banking Project"
version = "1.0"
description = "educational project"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
  )/
)
'''

[tool.isort]
line_length = 119
