[tool.poetry]
name = "study"
version = "1.0.0"
description = "Educational Banking Project"
license = "MIT"
authors = ["Vladislav Cherniavskii <ledcher93@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/asskelo/study"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ----------------------
# Static analysis
# ----------------------

[tool.mypy]
# Строгая типизация
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
exclude = "(?:^\\.|venv|\\.tox)/"

# ----------------------
# Code formatting
# ----------------------

[tool.black]
# Длина строки по PEP8
line-length = 119
# Отключаем «приведение» кавычек
skip-string-normalization = true
# Разрешаем «магические» запятые-трейлеры
skip-magic-trailing-comma = false
# Что форматировать
include = '\.pyi?$'
# Чего не трогать
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
  | node_modules
)/
'''

[tool.isort]
# Синхронизация с Black
profile = "black"
line_length = 119
include_trailing_comma = true
multi_line_output = 3
# пакеты разработки не включаем
skip = ["venv", ".tox", "build", "dist", "migrations", "node_modules"]
